figures updated related to refinement experiment in adcensus and also outl and disperr charts updated

--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -502,35 +502,36 @@ The results for both cases, refined and not refined, over the masked regions and
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.8]{adcenmsk3NoLR}
+\includegraphics[scale=0.8]{adcenmsk3NoLRmrk}
 \caption{Average disparity error for the masked regions - not refined}
 \label{fig:adcmnoLR}
 \end{figure} 
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.8]{adcenmsk3}
+\includegraphics[scale=0.8]{adcenmsk3mrk}
 \caption{Average disparity error for the masked regions - refined}
-\label{fig:adcm3}
+\label{fig:adcm3mrk}
 \end{figure} 
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.8]{adcenfull3NoLR}
+\includegraphics[scale=0.8]{adcenfull3NoLRmrk}
 \caption{Average disparity error for the whole image - not refined}
 \label{fig:adcfnoLR}
 \end{figure} 
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.8]{adcenfull3}
+\includegraphics[scale=0.8]{adcenfull3mrk}
 \caption{Average disparity error for the whole image - refined}
-\label{fig:adcf3}
+\label{fig:adcf3mrk}
 \end{figure} 
 
 As can be seen in the plots, the evaluation results in our specific criteria 
 are not significantly different from the results of the algorithm when LR check and refinement were triggered
-and only a few average values have slightly changed. We have marked a few of these values with a blue circle in Figures \ref{fig:adcmnoLR} and \ref{fig:adcfnoLR}.
+and only a few average values have slightly changed. We have marked a few of these values with a blue circle in Figures \ref{fig:adcmnoLR}, \ref{fig:adcm3mrk}, 
+\ref{fig:adcfnoLR}, and \ref{fig:adcf3mrk}.
 
 We also estimated the average execution time, the average disparity error, and the average outliers in this experiment. The results for 
 the average error and outliers are shown in the tables below. \newline
