--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{alltt}
+\usepackage{pifont}
 %\usepackage{epstopdf}
 %\numberwithin{equation}{section}
 
