--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -151,6 +151,14 @@
   howpublished = "\url{http://vision.middlebury.edu/stereo/eval/}"
 }
 
+@misc{midbdata,
+  author = {Daniel Scharstein},
+  title = {{MiddleBury Evaluation}},
+  month = July,
+  year = {2012},
+  howpublished = "\url{http://vision.middlebury.edu/stereo/data/}"
+}
+
 @misc{kitti,
   author = {Andreas Geiger},
   title = {{KITTI Vision}},
