--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -285,6 +285,5 @@ We have used C++ as the high level language for implementing
 the core functions within the system, such as the main evaluation function, 
 the masking process, and the other fundamental operations that are the building blocks of the system.
 Furthermore, the Tool Command Language (TCL) has been used for all the scripts that wrap around the C++ functions,
-to facilitate and accelerate the execution of each step in the process. \newline
-
+to facilitate and accelerate the execution of each step in the process. \newline \newline
 In this chapter, we described the main components of our proposed model. Next, we will discuss the functionality of our system through different experiments.
