--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -46,13 +46,15 @@
 \pagenumbering{roman}
 
 \thesistitle
-	{A New Approach for Evaluation of Stereo Correspondence Solutions in Outdoor Applications of Augmented Reality}
+	{A comprehensive Approach for Evaluation of \\ 
+	Stereo Correspondence Solutions \\
+	in Outdoor Augmented Reality}
 	{Baharehsadat Pourazar}
 	{Master of Sciences}
 	{Department of Computer Science}
 	{April 2014}
 
-%\include{abstract}
+\include{abstract}
 %\include{ack}
 \include{contents}
 \include{figures}
