--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -597,9 +597,10 @@ for one of the validity criteria, when the ground truth disparity is valid. As c
 \label{fig:outlnoref}
 \end{figure} 
 
-The average execution time was approximately $147.84$ seconds which is nearly half the running time of the algorithm with the L-R check and refinements triggered \ref{tab:timerefNoref}. 
+The average execution time was approximately $147.84$ seconds which is nearly half the running time of the algorithm with the L-R check and refinements 
+triggered, Table \ref{tab:timerefNoref}. 
 Comparing these results to the ones presented in Tables \ref{tab:outlmsk}, \ref{tab:outlfull}, and \ref{tab:avgerr} a slight decrease in the amount of errors and 
-almost no change in the number of outliers is observed.
+nearly no change in the number of outliers is observed.
 Analyzing the results in this experiment, we can conclude that despite the considerable rise in the execution time of the algorithm, no significant
 improvement in accuracy is achieved in our evaluation criteria through refinement of the disparity results; therefore, the execution of ADCensusB without any L-R check and
 refinement step is more beneficial to an AR application in outdoor environments, since it requires less processing time.\newline
@@ -619,21 +620,23 @@ unrefined & 147.84 \\ \hline
 
 \subsection{Discretization Degree of Disparity Values}
 According to different studies \cite{dras96, kru10,azuma01}, some other factors such as issues associated with the environment, display device, and capturing device
-can also affect the perception of depth in the visual system. As a result, the ability to detect the difference in depth 
-does not merely depend on how accurate the stereo correspondence algorithm can estimate the depth values and detect the changes in depth.
-In order to investigate the validity of this statement, we conducted another experiment. In this experiment we defined some stereoacuity thresholds. 
+can also affect the perception of depth in the visual system. As a result, the ability to detect the difference in depth and accurately estimate the
+depth of different points, in practice,
+do not merely depend on the implemented discretization level of the disparity values in the stereo correspondence algorithm.
+In order to investigate the validity of this statement, we conducted the following experiment. In this experiment we defined some stereoacuity thresholds. 
 In order to find the minimum threshold to start with, we attempted to find the 
-minimum disparity change in the grount truth disparity images. To this end, we move along horizontal scanlines in each image and 
-compute the difference between the values of consecutive pixels, which is, in fact, an indicator of the detectability of the difference in depth. 
+minimum disparity change in the ground truth disparity images. To this end, we move along horizontal scanlines in each image and 
+compute the difference between the values of consecutive pixels, which is, in fact, an indicator of the detectable threshold of the changes in depth between
+different pixels. 
 After finding the minimum value in each image, a global minimum is sought between all the computed values from different images.
 The value we found for image size of $1242\times375$ and the focal length of $721$ millimeters was $0.0022$ arcmins.
 After finding this minimum and defining our thresholds, we apply a nearly similar operation on the disparity results from each of the sample algorithms.
-In this process, while moving through each image, for those pixels whose generated disparity is close to the ground truth disparity, within a pre-defined pixel threshold, 
+In this process, while moving through each image, for those pixels whose generated disparity is close to the ground truth disparity, within a specific pixel threshold, 
 we estimate their depth difference from their following pixel
 in the ground truth and compare the value to each of the specified thresholds; if this value is less than a threshold, then we check to see whether
 the stereo algorithm has also detected different values for the corresponding pixels. 
-In case of detection, we increment a counter corresponding to each threshold.
-This process is repeated for different images and, finally, the average of the detected changes is estimated for each specified threshold.
+In case of detection, we increment a counter corresponding to each threshold that indicates the number of detected pixels.
+This process is repeated for different images and, finally, the average of detected pixels is estimated for each specified threshold.
 
 \begin{alltt}
 \textbf{ADP}; START
@@ -660,8 +663,10 @@ This process is repeated for different images and, finally, the average of the d
 \textbf{ADP}; END
 \end{alltt}
 The results for both algorithms are shown in Figure \ref{fig:algthresh}.
-As can be seen in these plots, for both algorithms, the average detected changes in disparity differences starts to converge at the value of approximately $0.4$ arcmins.
-We also observe that for the values below this threshold the average detected changes are much lower and for some values, such as the minimum detectable threshold in ground truth,
+As can be seen in these plots, for both algorithms, the average detected pixels with detectable change in depth values 
+starts to converge at the value of approximately $0.4$ arcmins.
+We also observe that for the values below this threshold the average detected pixels are very small and for some values, 
+such as the minimum detectable threshold in ground truth,
 both algorithms are not capable of detecting any change in depth values. 
 This implies that, regardless of the accuracy resolution of the algorithms, which is $1/8$th of a pixel for SGBM and $1/16$th of a pixel for ADCensusB, approximately equal to
 $0.6$ arcmins and $0.3$ arcmins, respectively, for Kitti images based on the camera parameters and the geometrical relation presented in Figure \ref{fig:camResolution} and 
@@ -672,7 +677,7 @@ device and its resolution, or the environmental noise.
 \begin{figure}[H]
 \centering
 \includegraphics{algthreshBoth}
-\caption{Average detected changes for different stereoacuity thresholds}
+\caption{Average detected pixels for different stereoacuity thresholds}
 \label{fig:algthresh}
 \end{figure} 
 \begin{figure}[H]
@@ -702,7 +707,7 @@ ADCensusB: \theta &= \arctan (\frac{\frac{1}{16}}{721}) = 0.0049 degrees \times 
 
 Therefore, in order to achieve more accurate depth values in the stereo algorithms and better detectability of their changes, 
 in areas of depth discontinuities, that is, to obtain a lower 
-detection threshold of depth changes
+threshold of depth changes
 closer to the actual resolution of the implemented algorithm, using higher resolution devices and considering their robustness to noise are also essential.
 However, the experimental results presented earlier in this chapter
 show that despite various types of error relevant to the capturing device, environmental noise, and the accuracy of the stereo correspondence algorithm
@@ -711,8 +716,7 @@ will not be perceptible in the HVS for outdoor AR applications.
 
 \section{Overview}
 Table \ref{tab:compare} shows an overview of the difference between our proposed evaluation approach and the other evaluation models, Middlebury
-and Kitti, in terms of the estimated evaluation metrics.
-
+and Kitti, in terms of the estimated evaluation metrics. \newline
 It should be noted that although the average error and the average outliers exist in the other evaluation schemes as well, the major
 difference which makes our evaluation more appropriate than the other schemes for practical applications of AR,
 is the approach employed during the design of the metrics and the analysis of the results in the evaluation process. In fact, integrating the 
@@ -787,7 +791,7 @@ through our evaluation system. The conventional evaluation models lack this prop
 in estimation of the disparity values, but also is affected by other factors, such as the environmental noise, the resolution of the capturing device and its
 robustness to noise.}
 
-Our experimental results show that, regardless of the theoretical accuracy of the implemented algorithm in the estimation of depth values and its resovability of depth changes,
+Our experimental results show that, regardless of the theoretical accuracy of the implemented algorithm in the estimation of depth values and its resolvability of depth changes,
 its effective stereoacuity threshold, that is, its ability to detect the changes in depth values, can be different from its ideal detectability threshold and is affected by other factors, 
 such as the error associated with the capturing device or its resolution. Therefore, in order to achieve a higher quality depth map of the surrounding environment in outdoor AR applications, 
 in addition to a wise choice of stereo correspondence algorithm, considering the resolution of the capturing device and its robustness to noise
