slight changes in captions and spacing in chap4

--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -102,9 +102,7 @@ Our evaluation model consists of the following key components:
 \end{itemize}
 
 It should be noted that some of these components, such as the masked ground truth, or the masked disparity maps 
-can be optionally built during the process depending on the specific parameters set at the run time of each step.
-
-Figure \ref{fig:higharch} shows the high level block diagram of our design.
+can be optionally built during the process depending on the specific parameters set at the run time of each step. Figure \ref{fig:higharch} shows the high level block diagram of our design.
 
 \begin{figure}[H]
 \centering
